webpack review improvements

--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
   },
   "homepage": "https://github.com/viztnsk/mesto#readme",
   "dependencies": {
-    "core-js": "^3.25.5",
-    "file-loader": "^6.2.0",
-    "jquery": "^3.6.1",
-    "url-loader": "^4.1.1"
+    "core-js": "^3.25.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
@@ -36,6 +33,9 @@
     "postcss-loader": "^7.0.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "file-loader": "^6.2.0",
+    "jquery": "^3.6.1",
+    "url-loader": "^4.1.1"
   }
 }
